2004-03-04 Hasso Tepper <hasso@estpak.ee>

	* vtysh.c: Remove using PAGER.

2004-01-15 Paul Jakma <paul@dishone.st>

	* vtysh_config.c: Fix up strlen to use correct string.
	
2003-12-23 Hasso Tepper <hasso@estpak.ee>
  
	* Makefile.am extract.pl vtysh.c vtysh.h vtysh_config.c:
	  isisd integration to vtysh.

2003-05-01 Sergiy Vyshnevetskiy <serg@vostok.net>

	vtysh.c: Program shouldn't terminate on pager execution failure
	vtysh_user.c: configure support for openpam (freebsd5.0)

2003-04-19 Hasso Tepper <hasso@estpak.ee>

	* extract.pl vtysh.c vtysh.h: sync daemon's route-map commands to
	have same syntax

2002-09-30 Paul Jakma <paulzebra@rs250.org>
	
	* vtysh.c: add 'write-config (integrated|daemon)' option
	to specifiy whether write config commands should write
	integrated Zebra.conf file and/or per daemon files.
	Defaults to per daemon, unless this is turned off.

2002-07-07  Kunihiro Ishiguro  <kunihiro@ipinfusion.com>

	* zebra-0.93 released.

2001-08-19  Kunihiro Ishiguro  <kunihiro@ipinfusion.com>

	* zebra-0.92a released.

2001-08-15  Kunihiro Ishiguro  <kunihiro@ipinfusion.com>

	* zebra-0.92 released.

2001-02-20  Kunihiro Ishiguro  <kunihiro@zebra.org>

	* vtysh.c (vtysh_client_config): Do not set bufsz to 120.
	Suggested by: Matthew Grant <grantma@anathoth.gen.nz>.

2001-02-15  Hideto Yamakawa <yamakawa@dml.com>

	* vtysh.c (vtysh_client_execute): Call fflush after fprintf.

	* vtysh_config.c (vtysh_config_dump): Use VTYSH_PAGER if defined.

2001-02-14  Kunihiro Ishiguro  <kunihiro@zebra.org>

	* vtysh.c (vtysh_execute_func): Add fflush before pclose.

2001-02-10  Kunihiro Ishiguro  <kunihiro@zebra.org>

	* vtysh.c: VTY shell pager name.  When environment variable
	VTYSH_PAGER is defined, use it as VTY shell pager.

2001-02-09  Kunihiro Ishiguro  <kunihiro@zebra.org>

	* vtysh.c (vtysh_execute_func): Add pager argument for test of
	pager invocation.

2001-02-08  Kunihiro Ishiguro  <kunihiro@zebra.org>

	* extract.pl: Add -DHAVE_CONFIG_H option to cpp.
